--- a/package.json
+++ b/package.json
@@ -121,7 +121,8 @@
     "compile": "rimraf ./build && tsc",
     "package": "gulp package",
     "lint": "tslint -p .",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
+    "postinstall": "rimraf ./build && tsc"
   },
   "bin": {
     "typeorm": "./cli.js"
