--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "version": "2.1.1",
     "compilerOptions": {
         "lib": ["es5", "es6"],
-        "outDir": "build/compiled",
+        "outDir": ".",
         "target": "es2018",
         "module": "commonjs",
         "moduleResolution": "node",
